fix: update another low-contrast style

--- a/src/client/components/When.css
+++ b/src/client/components/When.css
@@ -1,5 +1,5 @@
 .when {
-  color: #bbb;
+  color: #888;
   font-style: italic;
 }
 
